# sat-sn

./: .gitignore  pyproject.toml
notebooks/: extrair.ipynb  tributos.ipynb
resources/: tributos.db
src/: app.py  extract.py  tributos.py
